k3s_manifests/datadog-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: datadog
  namespace: nlp-pipeline
  labels:
    app: datadog
spec:
  selector:
    matchLabels:
      app: datadog
  template:
    metadata:
      labels:
        app: datadog
    spec:
      serviceAccountName: datadog-agent

      containers:
        - name: datadog-agent
          image: gcr.io/datadoghq/agent:7
          imagePullPolicy: IfNotPresent

          ports:
            - name: apm
              containerPort: 8126
              hostPort: 8126
              protocol: TCP

            - name: dogstatsd
              containerPort: 8125
              hostPort: 8125
              protocol: UDP


          volumeMounts:
            - name: proc
              mountPath: /host/proc
              readOnly: true
            - name: cgroup
              mountPath: /host/sys/fs/cgroup
              readOnly: true
            - name: datadog-run
              mountPath: /var/run/datadog

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"

          securityContext:
            runAsUser: 0
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - SYS_ADMIN
                - SYS_PTRACE
                - NET_ADMIN
                - NET_RAW

      volumes:
        - name: proc
          hostPath:
            path: /proc
        - name: cgroup
          hostPath:
            path: /sys/fs/cgroup
        - name: datadog-run
          hostPath:
            path: /var/run/datadog

      tolerations:
        - operator: "Exists"
