k3s_manifests/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  namespace: nlp-pipeline
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: ag7es/nlp-pipeline:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          volumeMounts:
            - name: text-storage
              mountPath: /app/texts
              readOnly: true

      volumes:
        - name: text-storage
          persistentVolumeClaim:
            claimName: text-pvc
