k3s_manifests/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: nlp-pipeline
spec:
  type: ClusterIP
  ports:
    - name: tcp-port
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: fastapi
