k3s_manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: nlp-pipeline
spec:
  type: ClusterIP
  ports:
    - name: tcp-port
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgres
